# WUWAOS

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROGRESS.md
docs/phases/: PHASE-01-process-control.md  PHASE-02-system-call-interface.md  PHASE-03-system-step.md  PHASE-04-fcfs.md
src/: main.cpp
src/core/: Process.cpp  Process.hpp  Simulation.cpp  Simulation.hpp
src/kernel/: Kernel.cpp  Kernel.hpp
src/schedulers/: FCFSScheduler.cpp  FCFSScheduler.hpp  Scheduler.hpp
src/shell/: Shell.cpp  Shell.hpp
src/system/: SystemCallInterface.cpp  SystemCallInterface.hpp
src/utils/: Logger.hpp
tests/: README.md
